MDEV-5901: EITS: killing the server leaves statistical tables in "marked as crashed" state - Do like sp.cc does with mysql.proc table: call HA_EXTRA_FLUSH after we've modified   a statistical table.